--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         <li><a href="https://twitter.com/manyDARK1"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
         <li><a href="https://github.com/manyDARK"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
     </ul>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-9750409955148702",
+    enable_page_level_ads: true
+  });
+</script>
 </div>
 </body>
 </html>
